--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,6 +1,6 @@
 .container{
     margin:auto;
-    max-width:750px;
+    max-width:900px;
     font-family: sans-serif;
 }
 
@@ -20,4 +20,11 @@
 
 .nav-link-text{
     color: black;
+}
+
+.site-title{
+    font-size: 3rem;
+    color: gray;
+    font-weight: 700;
+    margin: 3rem 0;
 }
